--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Smooch&display=swap');
+
 .App {
   text-align: center;
 }
@@ -34,5 +36,343 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+/* .navbar{
+  height: 270px;
+} */
+.n{
+  border-bottom: #dfdcdc solid 1px;
+}
+.logo{
+  height: 236px;
+}
+.nav-link{
+  color: black;
+  margin-left: 20px;
+  font-size: 19px;
+  font-style: Roboto, sans-serif;
+}
+.nav-hover{
+  color: rgb(0, 140, 255);
+}
+
+.icon{
+  margin: 20px;
+  font-size: 24px;
+  border-radius: 50%;
+  color:white
+}
+.fa-facebook-f{
+  background-color: #4169e1;
+  border: #4169e1 solid 12px;
+}
+.fa-twitter{
+  background-color:rgb(0, 204, 255) ;
+  border: rgb(0, 204, 255) solid 12px;
+}
+.fa-envelope{
+  background-color:brown ;
+  border: brown solid 12px;
+}
+.fa-google{
+  background-color:red ;
+  border: red solid 12px;
+}
+
+.banner{
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGzop80t1ibSRwqmKelqq7g28N5Y8qhVcF_Q&usqp=CAU");
+  height: 600px;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.banner-text{
+  color:white;
+  font-family: 'Smooch', cursive;
+  font-size: 100px;
+  text-align: center;
+}
+
+
+.events{
+  margin-top: 120px;
+}
+.event-title{
+  color: #2096AC;
+  font-style: Roboto;
+  font-size: 35px;
+}
+.event-title1{
+  margin-left: 20%;
+}
+.event-desc1{
+  margin-left: 20%;
+}
+.event-btn1{
+  margin-left: 20%;
+}
+.event-img{
+  width: 70%;
+  border: #fff solid 10px;
+  box-shadow: 5px 8px 8px#d6d6d6;
+}
+.event-img2{
+  margin-left: 20%;
+}
+.event-desc{
+  width: 65%;
+  font-style: Roboto;
+  color: #7E868C;
+  font-size: 17px;
+  line-height: 1.8;
+}
+.event-btn{
+  border: none;
+  font-style: Roboto;
+  font-weight: bold;
+  margin-top: 20px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 28px;
+  padding-right: 28px;
+  font-size: 15px;
+  color: #fff;
+  background-color: #e4bc36 ;
+}
+
+.video{
+  text-align: center;
+  margin-top: 80px;
+  background-color: #bce2d6;
+}
+.vid-title{
+  padding-top: 40px;
+  padding-bottom: 20px;
+  font-size: 40px;
+  color: #003e53;
+}
+.vid{
+  width: 50%;
+  margin-left: 25%;
+  padding-bottom: 50px;
+}
+.yt{
+  width: 100%;
+  height: 400px;
+  border: #fff solid 10px;
+  box-shadow: 5px 8px 8px#a7c5bb;
+}
+
+.hotel-title{
+  margin-top: 80px;
+  margin-left: 20%;
+  font-size: 35px;
+  color: #e4bc36;
+}
+.hotel-desc{
+  margin-left: 20%;
+  width: 60%;
+  line-height: 2;
+  font-style: Roboto;
+  color: #7E868C;
+  font-size: 18px;
+}
+.hotel-img{
+  margin-top: 40px;
+  width: 50%;
+  margin-left: 25%;
+  border: #fff solid 10px;
+  box-shadow: 5px 8px 8px#d6d6d6;
+}
+
+.bless{
+  margin-top: 70px;
+  text-align: center;
+}
+.bless-text{
+  margin-left: 20%;
+  width: 60%;
+  line-height: 2;
+  font-style: Roboto;
+  color: #7E868C;
+  font-size: 18px;
+  margin-top: 30px;
+}
+
+.container-img{
+  display: grid;
+  width: 60%;
+  margin-left: 20%;
+  grid-template-rows: auto auto auto;
+  grid-template-columns: auto auto auto;
+}
+.img1{
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+  width: 100%;
+  box-shadow: 0 0 0 10px #fff;
+  border-radius: 14px;
+}
+.img2{
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+  width: 100%;
+  box-shadow: 0 0 0 10px #fff;
+  border-radius: 14px;
+}
+.img3{
+  grid-row: 1 / 3;
+  grid-column: 2 / 3;
+  width: 100%;
+  margin-left: 10px;
+  box-shadow: 0 0 0 10px #fff;
+  border-radius: 14px;
+}
+.gallery{
+  margin-left: 20%;
+  margin-top: 60px;
+  margin-bottom: 30px;
+  font-size: 50px;
+}
+
+.footer{
+  display: flex;
+  background-color: #e6f8ffbb;
+  margin-top: 80px;
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 80px;
+}
+.details{
+  font-size: 17px;
+}
+.ft{
+  margin-left: 8%;
+  margin-right: 8%;
+}
+.fot{
+  font-size: 20px;
+}
+.fot-link{
+  list-style: none;
+  text-align: left;
+  font-size: 17px;
+}
+.fot-link li a{
+  text-decoration: none;
+  color: #7E868C;
+}
+
+.sticky-footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(252, 192, 239);
+  padding: 14px;
+}
+.order{
+  border: none;
+  background-color: white;
+  padding: 10px;
+  border-radius: 6px;
+  color: rgb(255, 41, 184);
+  font-weight: bold;
+}
+.order:hover{
+  background-color: rgb(255, 41, 184);
+  color: white;
+}
+
+@media only screen and (max-width: 600px) {
+  .logo{
+    height: 150px;
+  }
+
+  .banner-text{
+    font-size: 80px;
+  }
+
+
+  .footer{
+    display: grid;
+  }
+  .fot-link{
+    text-align: center;
+  }
+  .ft{
+    margin-top: 40px;
+  }
+
+
+  .gallery{
+    font-size: 30px;
+  }
+
+
+  .hotel-img{
+    margin-top: 30px;
+    width: 70%;
+    margin-left: 15%;
+    border: #fff solid 6px;
+  }
+  .hotel-title{
+    font-size: 30px;
+  }
+  .hotel-desc{
+    line-height: 1.8;
+    font-size: 18px;
+  }
+
+
+  .vid-title{
+    font-size: 30px;
+  }
+  .vid{
+    width: 70%;
+    margin-left: 15%;
+  }
+  .yt{
+    height: 200px;
+    border: #fff solid 6px;
+  }
+
+  
+  .event-img{
+    width: 100%;
+    border: #fff solid 5px;
+  }
+  .event-img2{
+    margin-left: 0%;
+  }
+  .event-desc{
+    width:100%;
+    font-size: 15px;
+  }
+  .event-btn{
+    margin-top: 17px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 24px;
+    padding-right: 24px;
+    font-size: 13px;
+  }
+  .event-title1{
+    margin-left: 10%;
+  }
+  .event-desc1{
+    margin-left: 10%;
+  }
+  .event-btn1{
+    margin-left: 10%;
+  }
+  .events{
+    margin-top: 80px;
+  }
+  .event-title{
+    font-size: 28px;
   }
 }
